src/components/post-it/post-it.module.css
.postIt {
  position: absolute;
  background-color: var(--ds-grey-000);
  border: 1px solid var(--ds-grey-300);
  border-radius: var(--ds-radius-200);
  transition: border 160ms var(--ds-transition-easing);
}

.pastDueDate {
  border: 1px solid var(--ds-red-300);
}

[data-draggable="true"] .postIt {
  cursor: grab;
}

.postIt:has([aria-expanded="true"]),
.postIt[data-dragged="true"],
.postIt:focus-within {
  z-index: 1;
}

.postIt:has([aria-expanded="true"]),
.postIt[data-dragged="false"]:focus-within {
  border: 1px solid var(--ds-grey-400);
}

.grid {
  position: relative;
  top: unset !important;
  left: unset !important;
  width: auto !important;
  height: 240px !important;
  transform: none !important;
  z-index: 0;
}

.minimized {
  cursor: pointer;
}

.maximized {
  position: fixed;
  margin: auto;
}

.maximized,
.maximized:has([aria-expanded="true"]) .maximized:focus-within {
  z-index: 3;
}

.minimized * {
  pointer-events: none;
}

.overflow {
  border-radius: inherit;
  overflow: clip;
}

.scroll {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 8x;
  overflow: auto;
  scrollbar-width: thin;
  border-radius: inherit;
}

.maximized .scroll {
  overscroll-behavior: contain;
}

.postIt[data-dragged="true"] .scroll * {
  opacity: 50%;
  pointer-events: none;
  filter: grayscale(100%);
  user-select: none;
}

